style: fix color issue on mobile

--- a/src/pages/BoostPage/BoostPage.css
+++ b/src/pages/BoostPage/BoostPage.css
@@ -9,6 +9,7 @@
   text-align: center;
   font-size: var(--font-sizexl);
   font-family: var(--font-familyBody);
+  color: #fff;
 }
 
 .bp-boosters h2 {
@@ -51,6 +52,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  color: #fff;
 }
 .app-boosters .title {
   font-weight: 700;
